src/test/ui/type-alias-impl-trait/closure_wf_outlives.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/closure_wf_outlives.rs:47:22
   |
LL |     type Opaque<T> = impl Sized;
   |                      ^^^^^^^^^^ ...so that the type `T` will meet its required lifetime bounds...
   |
note: ...that is required by this bound
  --> $DIR/closure_wf_outlives.rs:52:12
   |
LL |         T: 'static,
   |            ^^^^^^^
help: consider adding an explicit lifetime bound...
   |
LL |     type Opaque<T: 'static> = impl Sized;
   |                  +++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0310`.
